--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,109 +1,107 @@
-.header{
-    .header__menu{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 17px 24px;
-        background-color: #fff;
-    
-        .header__menu--logo{
-            width: 150px;
-        }
-    
-        .header__menu--link{
-            a{
-                text-decoration: none;
-                font-size: $text-sm;
-                color: #9698a6;
-                margin-right: 32px;
-                position: relative;
-    
-                &:after{
-                    content: "";
-                    display: none;
-                    position: absolute;
-                    height: 5px;
-                    left: 0;
-                    right: 0;
-                    bottom: -30px;
-                    background: linear-gradient(to right, #31d35c, #2bb7da);
-                }
-    
-                &:hover{
-                    color: #000;
-                    
-                    &::after{
-                        display: block;
-                    }
-                }
-            }
-        }
-    
-        .header__menu--buger{
-            cursor: pointer;
+.header {
+  .menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 17px 24px;
+    background-color: #fff;
 
-            span{
-                display: block;
-                width: 26px;
-                height: 2px;
-                background-color: $darkBlue;
-                transition: all 300ms ease-in-out;
-                transform-origin: 3px 1px;
-                margin-bottom: 5px;
-            }
-        }
+    .menu__logo {
+      width: 150px;
     }
 
-    &.open{
-        opacity: 1;
-        position: fixed;
-        top: 0px;
-        right: 0px;
-        bottom: 0px;
-        left: 0px;
-        background-image: linear-gradient($darkBlue, transparent);
-        z-index: 2;
+    .menu__link {
+      a {
+        text-decoration: none;
+        font-size: $text-sm;
+        color: #9698a6;
+        margin-right: 32px;
+        position: relative;
 
-        .header__menu{
-            .header__menu--link{   
-                display: block;
-                position: absolute;
-                top: 10%;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 75%;
-                background: #fff;
-                padding: 1.625rem;
-                border-radius: 5px;
-    
-                a{
-                    display: block;
-                    padding: 10px 0px;
-                    text-align: center;
-                    color: $darkBlue;
-                    width: 100%;
-
-                    &:after{
-                        display: none;
-                    }
-                }
-            }
-
-            .header__menu--buger{
-                span:first-child {
-                    transform: rotate(45deg);
-                }
-                    
-                span:nth-child(2) {
-                    opacity: 0;
-                }
-                    
-                span:last-child {
-                    transform: rotate(-45deg);
-                }
-            }
+        &:after {
+          content: "";
+          display: none;
+          position: absolute;
+          height: 5px;
+          left: 0;
+          right: 0;
+          bottom: -30px;
+          background: linear-gradient(to right, #31d35c, #2bb7da);
         }
+
+        &:hover {
+          color: #000;
+
+          &::after {
+            display: block;
+          }
+        }
+      }
     }
+
+    .menu__buger {
+      cursor: pointer;
+
+      span {
+        display: block;
+        width: 26px;
+        height: 2px;
+        background-color: $darkBlue;
+        transition: all 300ms ease-in-out;
+        transform-origin: 3px 1px;
+        margin-bottom: 5px;
+      }
+    }
+  }
+
+  &.open {
+    opacity: 1;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-image: linear-gradient($darkBlue, transparent);
+    z-index: 2;
+
+    .menu {
+      .menu__link {
+        display: block;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 75%;
+        background: #fff;
+        padding: 1.625rem;
+        border-radius: 5px;
+
+        a {
+          display: block;
+          padding: 10px 0px;
+          text-align: center;
+          color: $darkBlue;
+          width: 100%;
+
+          &:after {
+            display: none;
+          }
+        }
+      }
+
+      .menu__buger {
+        span:first-child {
+          transform: rotate(45deg);
+        }
+
+        span:nth-child(2) {
+          opacity: 0;
+        }
+
+        span:last-child {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
 }
-
-
