--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,19 +8,19 @@ $veryLightGray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
 // Font Sizes
-$text-xs: 0.75rem;
-$text-sm: 0.875rem; //14px
-$text-base: 1rem; //16px
-$text-lg: 1.125rem; //18px
-$text-xl: 1.25rem;
-$text-2xl: 1.5rem;
-$text-3xl: 1.875rem;
-$text-4xl: 2.25rem;
-$text-5xl: 3rem;
-$text-6xl: 3.75rem;
-$text-7xl: 4.5rem;
-$text-8xl: 6rem;
-$text-9xl: 8rem;
+$text-xs: 12px;
+$text-sm: 14px; 
+$text-base: 16px; 
+$text-lg: 18px; 
+$text-xl: 20px;
+$text-2xl: 24px;
+$text-3xl: 30px;
+$text-4xl: 36px;
+$text-5xl: 48px;
+$text-6xl: 60px;
+$text-7xl: 72px;
+$text-8xl: 96px;
+$text-9xl: 128px;
 
 //width
 $max-width-container: 1200px;
