--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@ table {
 
 body {
   font-family: "Public Sans", sans-serif;
-  font-size: 1.125rem;
+  font-size: 18px;
 }
 
 .container {
@@ -171,12 +171,113 @@ img {
   background: linear-gradient(to right, #31d35c, #2bb7da);
   border-radius: 50px;
   color: #fff;
-  font-size: 0.875rem;
   text-decoration: none;
 }
 
 .button:hover {
   opacity: 0.8;
+}
+
+.text-xs {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.text-sm {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.text-base {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.text-lg {
+  font-size: 18px;
+  line-height: 28px;
+}
+
+@media (max-width: 767px) {
+  .text-lg {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
+.text-xl {
+  font-size: 20px;
+  line-height: 28px;
+}
+
+.text-2xl {
+  font-size: 24px;
+  line-height: 32px;
+}
+
+@media (max-width: 767px) {
+  .text-2xl {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+
+.text-3xl {
+  font-size: 30px;
+  line-height: 36px;
+}
+
+.text-4xl {
+  font-size: 36px;
+  line-height: 40px;
+}
+
+@media (max-width: 767px) {
+  .text-4xl {
+    font-size: 30px;
+    line-height: 36px;
+  }
+}
+
+.text-5xl {
+  font-size: 48px;
+  line-height: 1;
+}
+
+@media (max-width: 767px) {
+  .text-5xl {
+    font-size: 36px;
+    line-height: 40px;
+  }
+}
+
+.text-6xl {
+  font-size: 60px;
+  line-height: 1;
+}
+
+.text-7xl {
+  font-size: 72px;
+  line-height: 1;
+}
+
+.text-8xl {
+  font-size: 96px;
+  line-height: 1;
+}
+
+.text-9xl {
+  font-size: 128px;
+  line-height: 1;
+}
+
+h1, h2 {
+  color: #2d314d;
+  margin-bottom: 36px;
+}
+
+p {
+  color: #9698a6;
 }
 
 .header .menu {
@@ -199,7 +300,7 @@ img {
 
 .header .menu .menu__link a {
   text-decoration: none;
-  font-size: 0.875rem;
+  font-size: 14px;
   color: #9698a6;
   margin-right: 32px;
   position: relative;
@@ -319,31 +420,11 @@ img {
   width: 40%;
   position: relative;
   top: -50px;
-}
-
-.hero .container .hero__text h2 {
-  font-size: 3rem;
-  color: #2d314d;
-  margin-bottom: 40px;
-}
-
-@media (max-width: 767px) {
-  .hero .container .hero__text h2 {
-    font-size: 1.875rem;
-  }
+  padding: 0px 15px;
 }
 
 .hero .container .hero__text p {
-  font-size: 1.125rem;
-  color: #9698a6;
-  line-height: 1.5;
   margin-bottom: 50px;
-}
-
-@media (max-width: 767px) {
-  .hero .container .hero__text p {
-    font-size: 0.875rem;
-  }
 }
 
 @media (max-width: 1023px) {
@@ -385,5 +466,165 @@ img {
             order: 1;
     right: 0%;
   }
+}
+
+.feature {
+  padding: 100px 24px;
+  background-color: #f3f4f6;
+}
+
+.feature .feature__heading {
+  margin-bottom: 48px;
+}
+
+.feature .feature__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.feature .feature__list .fearure__item {
+  width: 21%;
+  margin: 2%;
+}
+
+.feature .feature__list .fearure__item .feature__icon {
+  width: 72px;
+  height: 72px;
+  margin-bottom: 44px;
+}
+
+@media (max-width: 639px) {
+  .feature .feature__list .fearure__item .feature__icon {
+    margin: auto;
+    margin-bottom: 30px;
+  }
+}
+
+.feature .feature__list .fearure__item .feature__title {
+  color: #2d314d;
+  margin-bottom: 24px;
+}
+
+@media (max-width: 1023px) {
+  .feature .feature__list .fearure__item {
+    width: 46%;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 639px) {
+  .feature .feature__list .fearure__item {
+    margin-bottom: 30px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 639px) {
+  .feature .feature__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.article {
+  padding: 100px 24px;
+}
+
+.article .article__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.article .article__list .article__item {
+  width: 22%;
+  border-radius: 0.3125rem;
+  overflow: hidden;
+  background-color: white;
+  text-decoration: none;
+  margin-right: 3%;
+  -webkit-box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+}
+
+.article .article__list .article__item .article__image {
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.article .article__list .article__item .article__text {
+  padding: 15px;
+}
+
+.article .article__list .article__item .article__text .article__author {
+  color: #9698a6;
+  margin-bottom: 15px;
+}
+
+.article .article__list .article__item .article__text .article__title {
+  margin-bottom: 8px;
+  color: #2d314d;
+}
+
+@media (max-width: 1023px) {
+  .article .article__list .article__item {
+    width: 47%;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 639px) {
+  .article .article__list .article__item {
+    margin-bottom: 30px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 639px) {
+  .article .article__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+footer {
+  background-color: #2d314d;
+  padding: 40px;
+}
+
+footer .footer__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+footer .footer__info .footer__logo {
+  width: 150px;
+  margin-bottom: 30px;
+}
+
+footer .footer__info .footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer .footer__info .footer__social .icon {
+  margin-right: 20px;
 }
 /*# sourceMappingURL=style.css.map */
