--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -19,7 +19,12 @@ footer {
         display: flex;
 
         .icon {
-          margin-right: 20px;
+          width: 20px;
+          margin: 10px;
+        }
+
+        @include breakpoint-down(lg) {
+          justify-content: center;
         }
       }
 
