--- a/styles/style.css
+++ b/styles/style.css
@@ -633,7 +633,16 @@ footer .footer__wrap .footer__info .footer__social {
 }
 
 footer .footer__wrap .footer__info .footer__social .icon {
-  margin-right: 20px;
+  width: 20px;
+  margin: 10px;
+}
+
+@media (max-width: 1023px) {
+  footer .footer__wrap .footer__info .footer__social {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 @media (max-width: 1023px) {
